@@ -13,8 +13,6 @@
 package org.openhab.core.voice.text;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.ResourceBundle;
 import java.util.Set;
@@ -70,7 +68,7 @@ public final class ExpressionCardinality extends Expression {
 
     @Override
     List<Expression> getChildExpressions() {
-        return Collections.unmodifiableList(Arrays.asList(subExpression));
+        return List.of(subExpression);
     }
 
     @Override
